Alignment fixes.

--- a/src/app/hotels/hotels.component.css
+++ b/src/app/hotels/hotels.component.css
@@ -4,6 +4,12 @@
     margin: 0 
 }
 
+.btn-custom {
+    background-color: #fedc07;
+    border-color: #ebc200;
+    color: #17317f;
+}
+
 .listing .btn-primary {
     background-color: #fedc07; 
     border-bottom: 3px solid #ebc200; 
@@ -43,4 +49,19 @@ span.price { font-size: 2em;}
 
 .overview-title {
     color: #17317f;
+}
+.bs-placeholder {
+    background-color: #fff;
+}
+
+#dropdownMenuButton {
+    margin: 0;
+    text-align: left;
+    color: #495057;
+}
+
+.calendar-label-absolute-right {
+    float: right;
+    right: 1em;
+    position: absolute;
 }
